--- a/portfolio/Individual/app/css/start.css
+++ b/portfolio/Individual/app/css/start.css
@@ -37,8 +37,8 @@
   .info_block:before {
     content: '';
     display: block;
-    height: 70px;
-    width: 50px;
+    height: 60px;
+    width: 40px;
     background: url(../img/main-info-item.png) no-repeat;
     -webkit-background-size: contain;
             background-size: contain;
@@ -88,11 +88,17 @@
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    line-height: 100%; }
+    line-height: 100%;
+    position: relative;
+    padding-left: 30px; }
     .place_block span.insta:before {
       content: '';
-      margin-top: 0.1em;
-      margin-right: 10px;
+      position: absolute;
+      left: 0;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+              transform: translateY(-50%);
       height: 20px;
       width: 20px;
       background: url(../img/inst_item.png) no-repeat;
@@ -124,16 +130,18 @@
   .place_block {
     font-size: 7px; }
   .main_slogan {
-    font-size: 4rem; }
+    font-size: 3rem; }
   .place_block span.insta:before {
     height: 15px;
-    width: 15px;
-    margin-right: 7px;
-    margin-top: 0px; } }
+    width: 15px; }
+  .place_block span.insta {
+    padding-left: 20px; } }
 
 @media screen and (max-width: 1200px) {
   .main_slogan {
-    font-size: 3rem; } }
+    font-size: 3rem; }
+  .start-page_content .info_block {
+    padding-bottom: 50px; } }
 
 @media screen and (max-width: 992px) {
   .main_slogan {
@@ -145,7 +153,7 @@
     letter-spacing: 0.4em; }
   .slogan {
     display: none; }
-  .info_block {
+  .start-page .info_block {
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
         -ms-transform: translate(-50%, -50%);
