--- a/portfolio/Individual/app/scss/common.scss
+++ b/portfolio/Individual/app/scss/common.scss
@@ -4,18 +4,19 @@ html {
   font-size: 10px;
   height: 100%;
   background-color: #000;
+  min-height: 850px;
 }
 body {
   height: 100%;
-  //overflow: hidden;
   min-width: 320px;
-  min-height: 550px;
+  min-height: 850px;
 }
 .pages {
   height: 100%;
 }
 .body_fixed {
   width: 100%;
+  overflow: hidden !important;
 }
 *,
 *:before,
@@ -92,7 +93,7 @@ body {
 }
 
 .desc {
-  height: 100%;
+	height: 100%;
   padding-top: 120px;
   position: relative;
   z-index: 2;
@@ -101,7 +102,6 @@ body {
 #wrapper {
   height: 100%;
   position: relative;
-  overflow: hidden;
 }
 
 .container {
@@ -250,8 +250,18 @@ header {
   z-index: 1;
   .start_bg {
     display: block;
+    position: absolute;
+    width: 100%;
     height: 100%;
     background: url(../img/start.bg) no-repeat center top;
+    background-size: cover;
+  }
+  .barber_bg {
+  	display: none;
+  	position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(../img/barber_page.jpg) no-repeat center top;
     background-size: cover;
   }
 }
@@ -350,6 +360,9 @@ header {
 
 
 @media screen and (max-width: 1479px) {
+	html, body {
+		min-height: 550px;
+	}
   .container {
     max-width: 1140px;
   }
