--- a/portfolio/Individual/app/css/common.css
+++ b/portfolio/Individual/app/css/common.css
@@ -153,7 +153,8 @@ body {
 
 #wrapper {
   height: 100%;
-  position: relative; }
+  position: relative;
+  overflow-x: hidden; }
 
 .container {
   max-width: 1480px;
