--- a/portfolio/Individual/app/css/common.css
+++ b/portfolio/Individual/app/css/common.css
@@ -153,8 +153,7 @@ body {
 
 #wrapper {
   height: 100%;
-  position: relative;
-  overflow-x: hidden; }
+  position: relative; }
 
 .container {
   max-width: 1480px;
