--- a/portfolio/Individual/app/css/common.css
+++ b/portfolio/Individual/app/css/common.css
@@ -52,12 +52,14 @@ html {
   font-size: 10px;
   height: 100%;
   background-color: #000;
-  min-height: 850px; }
+  min-height: 850px;
+  overflow-x: hidden; }
 
 body {
   height: 100%;
   min-width: 320px;
-  min-height: 850px; }
+  min-height: 850px;
+  overflow-x: hidden; }
 
 .pages {
   height: 100%; }
