--- a/portfolio/Individual/app/scss/common.scss
+++ b/portfolio/Individual/app/scss/common.scss
@@ -10,6 +10,8 @@ body {
   height: 100%;
   min-width: 320px;
   min-height: 850px;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 .pages {
   height: 100%;
