--- a/portfolio/Individual/app/css/common.css
+++ b/portfolio/Individual/app/css/common.css
@@ -57,9 +57,7 @@ html {
 body {
   height: 100%;
   min-width: 320px;
-  min-height: 850px;
-  overflow: hidden;
-  overflow-y: scroll; }
+  min-height: 850px; }
 
 .pages {
   height: 100%; }
@@ -301,6 +299,9 @@ header {
   position: absolute;
   width: 100%;
   height: 100%;
+  -webkit-transition: height .3s;
+  -o-transition: height .3s;
+  transition: height .3s;
   top: 0;
   z-index: 1; }
   .backgrounds .start_bg {
