--- a/portfolio/Individual/app/scss/common.scss
+++ b/portfolio/Individual/app/scss/common.scss
@@ -10,8 +10,6 @@ body {
   height: 100%;
   min-width: 320px;
   min-height: 850px;
-  overflow: hidden;
-  overflow-y: scroll;
 }
 .pages {
   height: 100%;
@@ -248,6 +246,7 @@ header {
   position: absolute;
   width: 100%;
   height: 100%;
+  transition: height .3s;
   top: 0;
   z-index: 1;
   .start_bg {
