--- a/portfolio/Individual/app/css/common.css
+++ b/portfolio/Individual/app/css/common.css
@@ -298,10 +298,7 @@ header {
 .backgrounds {
   position: absolute;
   width: 100%;
-  height: 100%;
-  -webkit-transition: height .3s;
-  -o-transition: height .3s;
-  transition: height .3s;
+  height: 100vh;
   top: 0;
   z-index: 1; }
   .backgrounds .start_bg {
