--- a/portfolio/Individual/app/css/common.css
+++ b/portfolio/Individual/app/css/common.css
@@ -298,7 +298,7 @@ header {
 .backgrounds {
   position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   top: 0;
   z-index: 1; }
   .backgrounds .start_bg {
