--- a/portfolio/Individual/app/css/common.css
+++ b/portfolio/Individual/app/css/common.css
@@ -309,6 +309,14 @@ header {
     background: url(../img/start.bg) no-repeat center top;
     -webkit-background-size: cover;
             background-size: cover; }
+  .backgrounds .services_bg {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(../img/services_bg.jpg) no-repeat center top;
+    -webkit-background-size: cover;
+            background-size: cover; }
   .backgrounds .barber_bg {
     display: none;
     position: absolute;
