--- a/portfolio/Individual/app/scss/common.scss
+++ b/portfolio/Individual/app/scss/common.scss
@@ -256,6 +256,14 @@ header {
     background: url(../img/start.bg) no-repeat center top;
     background-size: cover;
   }
+  .services_bg {
+  	display: none;
+  	position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(../img/services_bg.jpg) no-repeat center top;
+    background-size: cover;
+  }
   .barber_bg {
   	display: none;
   	position: absolute;
