--- a/portfolio/Individual/app/css/barber.css
+++ b/portfolio/Individual/app/css/barber.css
@@ -117,6 +117,13 @@
       margin: 0; } }
 
 @media screen and (max-width: 576px) {
+  .barber_bg::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: rgba(0, 0, 0, 0.2); }
   .barbershops_container {
     padding-bottom: 50px; }
   .barbershops-page_content {
