--- a/portfolio/Individual/app/css/cosmetics.css
+++ b/portfolio/Individual/app/css/cosmetics.css
@@ -14,7 +14,6 @@
             flex-direction: column; }
   .cosmetics-page .cosmetics_blocks {
     height: 100%;
-    position: relative;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -22,8 +21,7 @@
     -webkit-box-align: center;
     -webkit-align-items: center;
         -ms-flex-align: center;
-            align-items: center;
-    min-height: 530px; }
+            align-items: center; }
   .cosmetics-page .cosmetics_container {
     width: 100%;
     display: -webkit-box;
@@ -63,7 +61,10 @@
       font: 4rem "BebasNeueRegular";
       text-align: center;
       color: #d1ab75;
-      letter-spacing: 0.5em; }
+      letter-spacing: 0.5em;
+      padding-left: 0.5em; }
+      .cosmetics-page .title_block .title br {
+        display: none; }
       .cosmetics-page .title_block .title:nth-child(2) {
         font-family: "BebasNeueBook";
         letter-spacing: 0.29em; }
@@ -103,15 +104,7 @@
 
 @media screen and (max-width: 1200px) {
   .cosmetics-page .cosmetics_container .block {
-    width: 20%; }
-  .cosmetics-page .cosmetics_blocks {
-    min-height: 770px; } }
-
-@media screen and (max-width: 992px) {
-  .main_slogan {
-    font-size: 2.5rem; }
-  .cosmetics-page .cosmetics_blocks {
-    min-height: 570px; } }
+    width: 20%; } }
 
 @media screen and (max-width: 767px) {
   .cosmetics-page .cosmetics_container .block {
@@ -126,11 +119,15 @@
     display: block; }
   .cosmetics-page .cosmetics_container .block {
     width: 50%; }
-  .cosmetics-page .cosmetics_container {
-    -webkit-box-align: start;
-    -webkit-align-items: flex-start;
-        -ms-flex-align: start;
-            align-items: flex-start; }
+  .cosmetics-page .title_block .title br {
+    display: inline-block; }
+  .cosmetics_bg::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: rgba(0, 0, 0, 0.5); }
   .cosmetics-page .title_block .title {
     font-size: 2rem; }
   .cosmetics-page .title_block .sub {
