--- a/portfolio/Individual/app/css/services.css
+++ b/portfolio/Individual/app/css/services.css
@@ -90,8 +90,6 @@
     width: 280px; } }
 
 @media screen and (max-width: 992px) {
-  .main_slogan {
-    font-size: 2.5rem; }
   .services-page .page_content {
     position: relative; }
   .services-page .services-page_content {
@@ -117,8 +115,13 @@
     margin-top: 25px; }
   .services-page .section_left {
     margin-bottom: 40px; }
-  .services-page {
-    background: rgba(0, 0, 0, 0.5); } }
+  .services_bg::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: rgba(0, 0, 0, 0.6); } }
 
 @media screen and (max-width: 480px) {
   .services-page .page_title img {
