--- a/portfolio/Individual/app/css/start.css
+++ b/portfolio/Individual/app/css/start.css
@@ -148,6 +148,13 @@
     font-size: 2.5rem; } }
 
 @media screen and (max-width: 576px) {
+  .start_bg::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: rgba(0, 0, 0, 0.5); }
   .main_slogan {
     font-size: 2rem;
     letter-spacing: 0.4em; }
