--- a/portfolio/Individual/app/scss/cosmetics.scss
+++ b/portfolio/Individual/app/scss/cosmetics.scss
@@ -8,10 +8,8 @@
 	}
 	.cosmetics_blocks {
 		height: 100%;
-		position: relative;
 		display: flex;
 		align-items: center;
-		min-height: 530px;
 	}
 	.cosmetics_container {
 		width: 100%;
@@ -44,6 +42,10 @@
 			text-align: center;
 			color: #d1ab75;
 			letter-spacing: 0.5em;
+			padding-left: 0.5em;
+			br {
+				display: none;
+			}
 			&:nth-child(2) {
 				font-family: "BebasNeueBook";
 				letter-spacing: 0.29em;
@@ -91,18 +93,9 @@
 	.cosmetics-page .cosmetics_container .block {
 		width: 20%;
 	}
-	.cosmetics-page .cosmetics_blocks {
-		min-height: 770px;
-	}
 }
 
 @media screen and (max-width: 992px) {
-	.main_slogan {
-		font-size: 2.5rem;
-	}
-	.cosmetics-page .cosmetics_blocks {
-		min-height: 570px;
-	}
 }
 @media screen and (max-width: 767px) {
 	.cosmetics-page .cosmetics_container .block {
@@ -123,8 +116,16 @@
 	.cosmetics-page .cosmetics_container .block {
 		width: 50%;
 	}
-	.cosmetics-page .cosmetics_container {
-		align-items: flex-start;
+	.cosmetics-page .title_block .title br {
+		display: inline-block;
+	}
+	.cosmetics_bg::before {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		display: block;
+		background: rgba(0, 0, 0, 0.5);
 	}
 	.cosmetics-page .title_block .title {
 		font-size: 2rem;
