--- a/portfolio/Individual/app/scss/services.scss
+++ b/portfolio/Individual/app/scss/services.scss
@@ -74,9 +74,6 @@
   }
 }
 @media screen and (max-width: 992px) {
-	.main_slogan {
-		font-size: 2.5rem;
-	}
 	.services-page .page_content {
 		position: relative;
 	}
@@ -101,8 +98,13 @@
 	.services-page .section_left {
 		margin-bottom: 40px;
 	}
-	.services-page {
-		background: rgba(0, 0, 0, 0.5);
+	.services_bg::before {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		display: block;
+		background: rgba(0, 0, 0, 0.6);
 	}
 }
 
