--- a/portfolio/Individual/app/scss/common.scss
+++ b/portfolio/Individual/app/scss/common.scss
@@ -250,11 +250,18 @@ header {
   z-index: 1;
   .start_bg {
     display: block;
-    //display: none;
     position: absolute;
     width: 100%;
     height: 100%;
     background: url(../img/start.bg) no-repeat center top;
+    background-size: cover;
+  }
+  .stars_bg {
+  	display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(../img/stars_page.jpg) no-repeat center top;
     background-size: cover;
   }
   .services_bg {
