--- a/portfolio/Individual/app/css/start.css
+++ b/portfolio/Individual/app/css/start.css
@@ -3,6 +3,7 @@
 
 .start-page_content {
   height: 100%;
+  min-height: 500px;
   position: relative;
   display: -webkit-box;
   display: -webkit-flex;
