--- a/portfolio/Individual/app/scss/common.scss
+++ b/portfolio/Individual/app/scss/common.scss
@@ -4,12 +4,10 @@ html {
   font-size: 10px;
   height: 100%;
   background-color: #000;
-  min-height: 850px;
 }
 body {
   height: 100%;
   min-width: 320px;
-  min-height: 850px;
 }
 .pages {
   height: 100%;
@@ -242,6 +240,10 @@ header {
   }
 }
 
+.scroll_block {
+	height: 100%;
+}
+
 .backgrounds {
   position: absolute;
   width: 100%;
@@ -384,9 +386,6 @@ header {
 
 
 @media screen and (max-width: 1479px) {
-	html, body {
-		min-height: 550px;
-	}
   .container {
     max-width: 1140px;
   }
