--- a/portfolio/Individual/app/css/common.css
+++ b/portfolio/Individual/app/css/common.css
@@ -51,11 +51,13 @@ html {
           box-sizing: border-box;
   font-size: 10px;
   height: 100%;
-  background-color: #000; }
+  background-color: #000;
+  overflow: hidden; }
 
 body {
   height: 100%;
-  min-width: 320px; }
+  min-width: 320px;
+  overflow: hidden; }
 
 .pages {
   height: 100%; }
