--- a/portfolio/Individual/app/scss/common.scss
+++ b/portfolio/Individual/app/scss/common.scss
@@ -4,10 +4,12 @@ html {
   font-size: 10px;
   height: 100%;
   background-color: #000;
+  overflow: hidden;
 }
 body {
   height: 100%;
   min-width: 320px;
+  overflow: hidden;
 }
 .pages {
   height: 100%;
